fix(fake-button): icon only alignment (#1365)

--- a/src/less/button/base/button.less
+++ b/src/less/button/base/button.less
@@ -264,3 +264,7 @@ a.fake-btn--icon-only {
     min-width: auto;
     padding: 0;
 }
+
+a.fake-btn--icon-only {
+    display: inline-flex;
+}
